border on header was overflowing, calc 100% minus padding fixed

--- a/style.css
+++ b/style.css
@@ -2,12 +2,11 @@
     box-sizing: border-box;
 }
 header {
-    width: 100%;
-    margin-bottom: 3rem;   
-    max-width: 100vw;
+    position: fixed;
+    width: calc(100% - 20px);  
+    /* max-width: 100vw; */
     padding: 10px 10px;
     border: solid 5px;
-    margin: 12px 0;
     color:blueviolet;
     font-size: calc(16px + 1vh);
     text-align: center;
@@ -19,6 +18,7 @@ h1 {
 div.main-info {
     min-height: 100vh;
     padding: 10px 10px;
+    margin: 0 3px;
     border: 2px solid grey;
     background-color: silver;
 }
